--- a/src/View/Components/_contest_timer.html.twig
+++ b/src/View/Components/_contest_timer.html.twig
@@ -1,12 +1,10 @@
-<div id="contest-timer" class="timer">
-</div>
+<div id="contest-timer" class="timer"></div>
 <script src="/assets/js/contestTimer.js"></script>
 <script>
-    let timer = new contestTimer(
-            {% if end_date %}
-                '{{ end_date }}'
-            {% else %}
-                '2020-05-20 17:18:00'
-            {% endif %},
-            'contest-timer');
+    let timer = new contestTimer({% if end_date %}'{{ end_date }}'{% else %} '2020-05-20 17:18:00' {% endif %},
+            'contest-timer',
+            function() {
+        console.log('end');
+               // window.location.href = '/contest/results/1';
+            });
 </script>
