--- a/src/View/Admin/contest_edit.html.twig
+++ b/src/View/Admin/contest_edit.html.twig
@@ -79,10 +79,10 @@
                     <div class="row d-flex justify-content-center">
                         <div class="form-group">
                             <button type="submit" name="saveContest" class="align-self-center btn btn-dark text-white">Save your contest <i class="fa fa-save"></i></button>
-                            <button type="button" name="deleteContest" class="align-self-center btn btn-danger text-white" data-toggle="modal" data-target="#staticBackdrop">Delete <i class="fa fa-trash"></i></button>
+                            <button type="button" name="deleteContest" class="align-self-center btn btn-danger text-white" data-toggle="modal" data-target="#confirmDeletion">Delete <i class="fa fa-trash"></i></button>
                         </div>
                     </div>
-                    <div class="modal fade" id="staticBackdrop" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                    <div class="modal fade" id="confirmDeletion" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
                         <div class="modal-dialog" role="document">
                             <div class="modal-content modal-contest">
                                 <div class="modal-header">
