--- a/src/View/Admin/contest.html.twig
+++ b/src/View/Admin/contest.html.twig
@@ -17,6 +17,25 @@
             <div class="row list-container overflow-auto">
                 <ul class="list-group col-12">
                     {% for contest in contests|reverse %}
+                    <div class="modal fade" id="activateContest{{ contest.id }}" data-backdrop="static" tabindex="-1" role="dialog" aria-labelledby="staticBackdropLabel" aria-hidden="true">
+                        <div class="modal-dialog" role="document">
+                            <div class="modal-content modal-contest">
+                                <div class="modal-header">
+                                    <h5 class="modal-title" id="staticBackdropLabel">Activate the contest</h5>
+                                    <button type="button" class="close" data-dismiss="modal" aria-label="Close">
+                                        <span aria-hidden="true">&times;</span>
+                                    </button>
+                                </div>
+                                <div class="modal-body">
+                                    <p>Are you sure ? This will be permanent.</p>
+                                </div>
+                                <div class="modal-footer">
+                                    <button type="button" class="btn btn-secondary" data-dismiss="modal">Close</button>
+                                    <a class="btn btn-success" href="/admin/setcontestactive/{{ contest.id }}">Yes <i class="fa fa-thumbs-up"></i></a>
+                                </div>
+                            </div>
+                        </div>
+                    </div>
                     <li class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2">
                         <p class="mb-0 existing_challenge pb-1"><i class="fa fa-flag"></i> {{ contest.name }}</p>
                         <div class="row col-12">
@@ -25,12 +44,13 @@
                                 <input type="checkbox" class="custom-control-input manage-contest-active" id="active-{{ contest.id }}" data-target="{{ contest.id }}" {% if (contest.is_active == '1') %} checked {% endif %}>
                                 <label class="custom-control-label" for="active-{{ contest.id }}">Active</label>
                                 </div> -->
-                            <div>
-                                <a href="/admin/setcontestactive/{{ contest.id }}"><button>active</button></a>
-                            </div>
                             <div class="custom-control custom-switch mt-2">
-                                <input type="checkbox" class="custom-control-input manage-contest-display" id="display-{{ contest.id }}" data-target="{{ contest.id }}" {% if (contest.is_visible == '1') %} checked {% endif %}>
+                                <input type="checkbox" class="custom-control-input manage-contest-display" id="display-{{ contest.id }}" data-visible="{{ contest.is_visible }}" data-id="{{ contest.id }}" {% if (contest.is_visible == '1') %} checked {% endif %}>
                                 <label class="custom-control-label" for="display-{{ contest.id }}">Display</label>
+                            </div>
+                            <div>
+                                <button class="btn btn-success rounded-sm ml-4 mt-1 text-center activated-buttons" data-toggle="modal" data-target="#activateContest{{ contest.id }}" {% if (contest.is_active == '1') %} hidden {% endif %}>Activate</button>
+                                <p class="ml-4 mb-0 mt-2 text-center rounded-sm text-white activated activated-buttons" {% if (contest.is_active == '0') %} hidden {% endif %}>Activated</p>
                             </div>
                         </div>
                     </li>
@@ -104,4 +124,8 @@
         </div>
     </div>
 </div>
+{% endblock %}
+
+{% block javascript %}
+    <script src="/assets/js/contestDisplay.js"></script>
 {% endblock %}
