--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -29,7 +29,7 @@
             {% endfor %}
         </div>
         <div class="text-center mt-4">
-            <a href="" class="btn btn-success">See old contests</a>
+            <a href="/joshua/oldcontests" class="btn btn-success">See old contests</a>
         </div>
     </div>
 {% endblock %}
