--- a/public/assets/css/joshua.css
+++ b/public/assets/css/joshua.css
@@ -49,7 +49,7 @@
     background-color: var(--josh-grey) !important;
 }
 
-.border-success img {
+.contest-image {
     height: 225px;
     width: auto;
 }
