fix admin users pagination and toasts and replace exit with die

--- a/src/View/Admin/users.html.twig
+++ b/src/View/Admin/users.html.twig
@@ -3,6 +3,7 @@
 {% block title %}Users manager{% endblock %}
 
 {% block content %}
+
     <div class="container">
         <div class="row">
             <div class="col-12 text-center">
@@ -51,7 +52,7 @@
                 <div class="row d-flex justify-content-start pagination">
                     <nav aria-label="Page navigation example">
                         <ul class="pagination">
-                            {% for i in range(1, number_pages+1 ) %}
+                            {% for i in range(1, number_pages ) %}
                             <li class="page-item {% if is_page == i %} active {% endif %}"><a class="page-link" href="/admin/manageusers/{{i}}">{{ i }}</a></li>
                             {% endfor %}
                         </ul>
@@ -60,21 +61,22 @@
             </div>
         </div>
     </div>
-
-    {% for user in users %}
-        <div class="toast" role="alert" id="user-toast-{{ user.id }}" style="position: fixed; top: 65px; right: 15px;">
-            <div class="toast-header bg-danger">
-                <img src="/assets/images/logo/picto.svg" class="rounded mr-2" alt="...">
-                <strong class="mr-auto text-white">Joshua administration</strong>
-                <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-                    <span aria-hidden="true" class="text-white">&times;</span>
-                </button>
+    <!-- Position it -->
+    <div style="position: absolute; top: 60px; right: 0; ">
+        {% for user in users %}
+            <div class="toast" role="alert" id="user-toast-{{ user.id }}">
+                <div class="toast-header bg-danger">
+                    <img src="/assets/images/logo/picto.svg" class="rounded mr-2" alt="user github avatar">
+                    <strong class="mr-auto text-white">Joshua administration</strong>
+                    <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+                        <span aria-hidden="true" class="text-white">&times;</span>
+                    </button>
+                </div>
+                <div class="toast-body" id="body-toast-{{ user.id }}">
+                </div>
             </div>
-            <div class="toast-body" id="body-toast-{{ user.id }}">
-            </div>
-        </div>
-    {%  endfor %}
-
+        {%  endfor %}
+    </div>
 {% endblock %}
 
 {% block javascript %}
