create challenge type

--- a/src/View/Admin/admin.html.twig
+++ b/src/View/Admin/admin.html.twig
@@ -10,6 +10,9 @@
                 <a class="admin_button btn btn-danger" href="/admin/createchallenge">CHALLENGES</a>
             </div>
             <div>
+                <a class="admin_button btn btn-danger" href="/admin/addType">CHALLENGES TYPES</a>
+            </div>
+            <div>
                 <a class="admin_button btn btn-danger" href="/admin/managecontest">CONTESTS</a>
             </div>
             <div>
