--- a/src/View/Contests/play.html.twig
+++ b/src/View/Contests/play.html.twig
@@ -13,16 +13,7 @@
             {% if ended == false %}
             <div class="col-12 col-md-3 text-red text-left">
                 <img src="/assets/images/podium.svg" width="30"><br> <b>Ranking on fire</b>
-                <ul class="text-white ranking">
-                    <li class="podium first">Green-onions <span class="score">4/12</span></li>
-                    <li class="podium second">SlimCrack  <span class="score">4/12</span></li>
-                    <li class="podium third">Caro-anna  <span class="score">3/12</span></li>
-                    <li>Frvaillant  <span class="score">3/12</span></li>
-                    <li>Lolita  <span class="score">2/12</span></li>
-                    <li>fmMaster  <span class="score">1/12</span></li>
-                    <li>sqlDev  <span class="score">1/12</span></li>
-                    <li>javaJsAngular  <span class="score">0/12</span></li>
-                </ul>
+                {% include 'Components/_ranking.html.twig' %}
             </div>
             <div class="col-12 col-md-6 flag-playground">
                 <h1>> {{ challengeOnTheWay.name }}</h1>
