--- a/src/View/Contests/play.html.twig
+++ b/src/View/Contests/play.html.twig
@@ -13,7 +13,9 @@
             {% if ended == false %}
             <div class="col-12 col-md-3 text-red text-left">
                 <img src="/assets/images/podium.svg" width="30"><br> <b>Ranking on fire</b>
-                {% include 'Components/_ranking.html.twig' %}
+                <div id="users-rank">
+                    {% include 'Components/_ranking.html.twig' %}
+                </div>
             </div>
             <div class="col-12 col-md-6 flag-playground">
                 <h1>> {{ challengeOnTheWay.name }}</h1>
