--- a/src/View/Admin/admin.html.twig
+++ b/src/View/Admin/admin.html.twig
@@ -7,7 +7,7 @@
         <div class="row d-flex justify-content-around">
             <h1 class="col-12 text-center admin_title">Welcome, Game Master</h1>
             <div>
-                <a class="admin_button btn btn-danger" href="/admin/createchallenge">CHALLENGES</a>
+                <a class="admin_button btn btn-danger" href="/admin/managechallenge">CHALLENGES</a>
             </div>
             <div>
                 <a class="admin_button btn btn-danger" href="/admin/addType">CHALLENGES TYPES</a>
