--- a/src/View/Admin/contest.html.twig
+++ b/src/View/Admin/contest.html.twig
@@ -37,20 +37,16 @@
                         </div>
                     </div>
                     <li class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2">
-                        <p class="mb-0 existing_challenge pb-1"><i class="fa fa-flag"></i> {{ contest.name }}</p>
-                        <div class="row col-12">
-                            <a class="btn btn-dark text-white rounded-sm mr-4 mt-1 p-1 pl-2 pr-2" href="/admin/editcontest/{{ contest.id }}">Edit</a>
-                            <!--<div class="custom-control custom-switch mt-2 mr-4">
-                                <input type="checkbox" class="custom-control-input manage-contest-active" id="active-{{ contest.id }}" data-target="{{ contest.id }}" {% if (contest.is_active == '1') %} checked {% endif %}>
-                                <label class="custom-control-label" for="active-{{ contest.id }}">Active</label>
-                                </div> -->
-                            <div class="custom-control custom-switch mt-2">
-                                <input type="checkbox" class="custom-control-input manage-contest-display" id="display-{{ contest.id }}" data-visible="{{ contest.is_visible }}" data-id="{{ contest.id }}" {% if (contest.is_visible == '1') %} checked {% endif %}>
-                                <label class="custom-control-label" for="display-{{ contest.id }}">Display</label>
-                            </div>
+                        <p class="mb-0 existing_challenge pb-1"><i class="fa fa-flag-checkered"></i> {{ contest.name }} <span class="float-right mr-1">{{ contest.campus }} <i class="fa fa-map-marker-alt"></i></span></p>
+                        <div class="row col-9 d-flex justify-content-between align-items-center p-0 ml-0">
+                            <a class="btn btn-dark text-white rounded-sm mt-1 p-0 pl-1 pr-1 " href="/admin/editcontest/{{ contest.id }}">Edit</a>
                             <div>
-                                <button class="btn btn-success rounded-sm ml-4 mt-1 text-center activated-buttons" data-toggle="modal" data-target="#activateContest{{ contest.id }}" {% if (contest.is_active == '1') %} hidden {% endif %}>Activate</button>
-                                <p class="ml-4 mb-0 mt-2 text-center rounded-sm text-white activated activated-buttons" {% if (contest.is_active == '0') %} hidden {% endif %}>Activated</p>
+                                <button class="btn btn-success rounded-sm mt-1 text-center p-0 pl-1 pr-1 activated-buttons" data-toggle="modal" data-target="#activateContest{{ contest.id }}" {% if (contest.is_active == '1') %} hidden {% endif %}>Activate</button>
+                                <p class="mb-0 mt-1 text-center rounded-sm text-white activated activated-buttons" {% if (contest.is_active == '0') %} hidden {% endif %}>Activated</p>
+                            </div>
+                            <div class="custom-control custom-switch">
+                                <input type="checkbox" class="custom-control-input manage-contest-display" id="display-{{ contest.id }}" data-visible="{{ contest.is_visible }}" data-id="{{ contest.id }}" {% if (contest.is_visible == '1') %} checked {% endif %}>
+                                <label class="custom-control-label display-switch mt-1" for="display-{{ contest.id }}">Display</label>
                             </div>
                         </div>
                     </li>
@@ -79,7 +75,7 @@
                             <label class="input-group-text" for="campus" id="inputGroup-campus">Campus</label>
                         </div>
                         <select class="custom-select" id="campus" name="campus" required>
-                            <option value="0">All campus</option>
+                            <option value="0">All campuses</option>
                             {% for campus in campuses %}
                                 <option value="{{ campus.id }}" {% if contest.campus_id == campus.id %}selected{% endif %}>{{ campus.city }}</option>
                             {% endfor %}
@@ -99,7 +95,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">Duration</span>
                         </div>
-                        <input type="number" class="form-control" placeholder="Contest duration in hours" aria-describedby="basic-addon1" name="duration" value="{{ contest.duration }}" required>
+                        <input type="number" class="form-control" placeholder="Contest duration in minutes" aria-describedby="basic-addon1" name="duration" value="{{ contest.duration }}" required>
                     </div>
                 </div>
                 <div class="row d-flex justify-content-center">
