Creation and edition of challenges, still some problems with foreign keys in deletion

--- a/src/View/Admin/admin.html.twig
+++ b/src/View/Admin/admin.html.twig
@@ -10,7 +10,7 @@
                 <a class="admin_button btn btn-danger" href="/admin/managechallenge">CHALLENGES</a>
             </div>
             <div>
-                <a class="admin_button btn btn-danger" href="/admin/addType">CHALLENGES TYPES</a>
+                <a class="admin_button btn btn-danger" href="/admin/addType">CHALLENGE TYPES</a>
             </div>
             <div>
                 <a class="admin_button btn btn-danger" href="/admin/managecontest">CONTESTS</a>
