--- a/src/View/Admin/contest.html.twig
+++ b/src/View/Admin/contest.html.twig
@@ -39,7 +39,7 @@
                     <li class="list-group-item list-group-item-dark rounded-sm p-1 pl-2 mb-2">
                         <p class="mb-0 existing_challenge pb-1"><i class="fa fa-flag-checkered"></i> {{ contest.name }} <span class="float-right mr-1">{{ contest.campus }} <i class="fa fa-map-marker-alt"></i></span></p>
                         <div class="row col-9 d-flex justify-content-between align-items-center p-0 ml-0">
-                            <a class="btn btn-dark text-white rounded-sm mt-1 p-0 pl-1 pr-1 " href="/admin/editcontest/{{ contest.id }}">Edit</a>
+                            <a class="btn btn-dark text-white rounded-sm mt-1 p-0 pl-1 pr-1" href="/admin/editcontest/{{ contest.id }}">Edit</a>
                             <div>
                                 <button class="btn btn-success rounded-sm mt-1 text-center p-0 pl-1 pr-1 activated-buttons" data-toggle="modal" data-target="#activateContest{{ contest.id }}" {% if (contest.is_active == '1') %} hidden {% endif %}>Activate</button>
                                 <p class="mb-0 mt-1 text-center rounded-sm text-white activated activated-buttons" {% if (contest.is_active == '0') %} hidden {% endif %}>Activated</p>
@@ -66,7 +66,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">Title</span>
                         </div>
-                        <input type="text" class="form-control" placeholder="Max 30 characters" aria-describedby="basic-addon1" name="name" value="{{ contest.name }}" required>
+                        <input type="text" class="form-control" maxlength="30" placeholder="Max 30 characters" aria-describedby="basic-addon1" name="name" value="{{ contest.name }}" required>
                     </div>
                 </div>
                 <div class="row d-flex justify-content-center">
@@ -77,7 +77,7 @@
                         <select class="custom-select" id="campus" name="campus" required>
                             <option value="0">All campuses</option>
                             {% for campus in campuses %}
-                                <option value="{{ campus.id }}" {% if contest.campus_id == campus.id %}selected{% endif %}>{{ campus.city }}</option>
+                                <option value="{{ campus.id }}" {% if contest.campus == campus.id %} selected {% endif %}>{{ campus.city }}</option>
                             {% endfor %}
                         </select>
                     </div>
@@ -87,7 +87,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text">Description</span>
                         </div>
-                        <textarea class="form-control" aria-label="Description" maxlength="200" placeholder="Between 30 and 200 characters" name="description" required>{{ contest.description }}</textarea>
+                        <textarea class="form-control" aria-label="Description" minlength="30" maxlength="200" placeholder="Between 30 and 200 characters" name="description" required>{{ contest.description }}</textarea>
                     </div>
                 </div>
                 <div class="row d-flex justify-content-center">
@@ -103,7 +103,7 @@
                         <div class="input-group-prepend">
                             <span class="input-group-text" id="basic-addon1">Image</span>
                         </div>
-                        <input type="url" class="form-control" placeholder="Paste here the url of the image" aria-describedby="basic-addon1" name="image" value="{{ contest.url }}">
+                        <input type="url" class="form-control" placeholder="Paste here the url of the image" aria-describedby="basic-addon1" name="image" value="{{ contest.image }}">
                     </div>
                 </div>
                 <div class="row d-flex justify-content-center">
