Minor change contest + add data in database

--- a/public/assets/css/joshua.css
+++ b/public/assets/css/joshua.css
@@ -37,6 +37,10 @@
     margin-right: 0;
 }
 
+.card-img-top {
+    height: 220px;
+}
+
 .border-success {
     border-color: var(--josh-green) !important;
 }
