--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -21,7 +21,7 @@
                                 </a>
                             {% else %}
                                 <p class="float-left margin-duration">Duration : {{ contest.formatted_duration.hours }}h {% if contest.formatted_duration.minutes != 0 %}{{ contest.formatted_duration.minutes }}m{% endif %}</p>
-                                <button class="btn btn-dark float-right">Soon !</button>
+                                <p class="text-white float-right margin-duration">Soon !</p>
                             {% endif %}
                         </div>
                     </div>
