fix problems with fetch returns

--- a/src/View/Admin/users.html.twig
+++ b/src/View/Admin/users.html.twig
@@ -62,7 +62,7 @@
         </div>
     </div>
     <!-- Position it -->
-    <div style="position: absolute; top: 60px; right: 0; ">
+    <div style="position: absolute; top: 60px; right: 0; height:15px;">
         {% for user in users %}
             <div class="toast" role="alert" id="user-toast-{{ user.id }}">
                 <div class="toast-header bg-danger">
