feat : ranking is updated every 30 seconds

--- a/src/View/Contests/play.html.twig
+++ b/src/View/Contests/play.html.twig
@@ -125,6 +125,7 @@
 {% endblock %}
 
 {% block javascript %}
+<script src="/assets/js/joshuaAjax.js"></script>
 <script src="/assets/js/flagChecker.js"></script>
 <script src="/assets/js/contestTimer.js"></script>
 <script>
@@ -135,5 +136,8 @@
             let solutionPoster = document.getElementById('solution-poster');
             solutionPoster.classList.add('hide');
         });
+        const timeToRefreshRanking = 30000;
+        let ranker = new joshuaAjax();
+        ranker.joshuaAjaxTimer('/contest/getRankingInContest/{{ contest.id }}', 'users-rank', timeToRefreshRanking);
 </script>
 {% endblock %}
