--- a/public/assets/css/main.css
+++ b/public/assets/css/main.css
@@ -1,5 +1,6 @@
 @import "joshua.css";
 @import "admin.css";
+@import "dashboard.css";
 @import "user.css";
 @import "contest.css";
 @import "error404.css";
