--- a/src/View/Admin/admin.html.twig
+++ b/src/View/Admin/admin.html.twig
@@ -15,7 +15,7 @@
                             <span class="number text-red">{{ total_challenges }}</span> challenges.
                         </p>
                         <div class="form-group">
-                            <a class="btn btn-dark" href="/admin/managechallenge"><i class="fas fa-plus"></i> Add Challenges</a>
+                            <a class="btn btn-dark" href="/admin/managechallenge"><i class="fas fa-plus"></i> Add challenge</a>
                         </div>
                         <div class="form-group">
                             <select id="challenge-list" class="custom-select">
@@ -39,7 +39,7 @@
                             <span class="number text-red">{{ total_contests }}</span> contests.
                         </p>
                         <div class="form-group">
-                            <a class="btn btn-dark" href="/admin/managecontest"><i class="fas fa-plus"></i> Add Contest</a>
+                            <a class="btn btn-dark" href="/admin/managecontest"><i class="fas fa-plus"></i> contests</a>
                         </div>
                         <div class="form-group">
                             <select id="contest-list" class="custom-select">
@@ -85,10 +85,10 @@
                         <span class="number text-red">{{ total_specialties }}</span> specialties.
                     </p>
                     <div class="form-group">
-                        <a class="btn btn-dark" href="/admin/addcampus"><i class="fas fa-graduation-cap"></i> campuses</a><br>
+                        <a class="btn btn-dark" href="/admin/addcampus"><i class="fas fa-graduation-cap"></i> Campuses</a><br>
                     </div>
                     <div class="form-group">
-                        <a class="btn btn-dark" href="/admin/addSpecialty"><i class="fab fa-codepen"></i> specialties</a><br>
+                        <a class="btn btn-dark" href="/admin/addSpecialty"><i class="fab fa-codepen"></i> Specialties</a><br>
                     </div>
 
                 </div>
