--- a/src/View/Home/home.html.twig
+++ b/src/View/Home/home.html.twig
@@ -14,7 +14,7 @@
                             <p class="card-text">{{ contest.description }}</p>
                         </div>
                         <div class="card-footer">
-                            {% if contest.active == true %}
+                            {% if contest.is_active == true %}
                                 <p class="float-left margin-duration" id="contest-timer{{ contest.id }}"></p>
                                 <a href="/contest/play/{{ contest.id }}">
                                     <button class="btn btn-dark float-right">Let's Go !</button>
