--- a/public/assets/css/admin.css
+++ b/public/assets/css/admin.css
@@ -81,6 +81,17 @@ table.adminusers tr td {
 .draggable:hover {
     cursor : move;
 }
+.list-group-item {
+    transition: all 0.2s ease-in-out;
+}
+.list-group-item.spacer {
+    border:none;
+    opacity:0;
+    border-radius:5px;
+    margin-bottom:5px;
+    height:40px;
+    animation:flashing-item 0.5s ease-in-out;
+}
 
 .existing_challenge {
     font-family: var(--josh-major-font);
